# GameMaker

./: .gitattributes  .gitignore  .project_root  AGENTS.md  AI_README.md  Cargo.toml  README.md  Start-AutoDesignMaker.cmd  rust-toolchain.toml
apps/adm-new-cli/: Cargo.toml
apps/adm-new-cli/src/: main.rs
apps/desktop-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src/: design_specs.rs  draft_retention.rs  lib.rs  main.rs  runtime.rs
apps/desktop-tauri/src/commands/: ai.rs  config.rs  design.rs  mod.rs  pipeline.rs  save.rs  utility.rs
apps/root-launcher/: Cargo.toml  build.rs  launcher.rc
crates/adm-new-ai/: Cargo.toml
crates/adm-new-ai/src/: adapters.rs  api_probe.rs  cli_probe.rs  design_contracts.rs  http_endpoint_policy.rs  image.rs  image_execution.rs  lib.rs  resolution.rs
crates/adm-new-ai/src/bounded_completion/: mod.rs  policy.rs  service.rs  tests.rs  types.rs  validation.rs
crates/adm-new-ai/src/image_execution/: cli.rs  http.rs  png.rs  tests.rs
crates/adm-new-ai/src/image_execution/cli/: discovery.rs  process.rs  tests.rs
crates/adm-new-application/: Cargo.toml
crates/adm-new-application/src/: dev_tools.rs  execution_objects.rs  iteration.rs  lib.rs  migration_tools.rs  project_environment.rs  runtime.rs  style_image.rs  validation_tools.rs  vlm_review.rs  work_unit.rs
crates/adm-new-application/tests/: sdk_skill_overlay.rs
crates/adm-new-artifact/: Cargo.toml
crates/adm-new-artifact/src/: asset_tools.rs  lib.rs
crates/adm-new-change-kernel/: Cargo.toml
crates/adm-new-change-kernel/src/: kernel.rs  lib.rs  spec_store.rs  workspace_change_set.rs
crates/adm-new-change-kernel/tests/: spec_store.rs  workspace_contract.rs
crates/adm-new-config/: Cargo.toml
crates/adm-new-contracts/: Cargo.toml
crates/adm-new-contracts/src/: ai.rs  artifact.rs  execution_object.rs  lib.rs  locale.rs  log.rs  package.rs  patch.rs  pipeline.rs  project.rs  response.rs  save.rs  schema.rs  sdk.rs  view.rs
crates/adm-new-design/: Cargo.toml
crates/adm-new-design/src/: anti_overfit.rs  game_spec_projection.rs  handoff.rs  lib.rs  semantic_pipeline.rs
crates/adm-new-design/src/ai_interview/: backend.rs  mapping_agent.rs  mod.rs  prompt_packer.rs  route_planner.rs  state.rs  summary_agent.rs  ucos_bridge.rs
crates/adm-new-design/src/art_pipeline/: mod.rs  paths.rs  stage04.rs  stage09.rs  stage12.rs  stage13.rs  stage14.rs
crates/adm-new-design/src/contracts/: common.rs  identity.rs  mod.rs  open_questions.rs  playable.rs  project_dna.rs
crates/adm-new-design/src/data_loader/: entity_schema.rs  mod.rs  normalization.rs  project_templates.rs  validation.rs
crates/adm-new-design/src/decision_graph/: mod.rs  policy.rs
crates/adm-new-design/tests/: a03_decision_graph.rs
crates/adm-new-foundation/: Cargo.toml
crates/adm-new-foundation/src/: io.rs  lib.rs  markdown.rs  paths.rs  process.rs  source_root.rs  structured_md.rs  text_extractor.rs  tool.rs  yaml_compat.rs
crates/adm-new-foundation/tests/: source_project_root.rs
crates/adm-new-game-spec/: Cargo.toml
crates/adm-new-governance/: Cargo.toml
crates/adm-new-governance/src/: lib.rs
crates/adm-new-knowledge/: Cargo.toml
crates/adm-new-knowledge/src/: context.rs  freshness.rs  identity.rs  lib.rs  manifest.rs  memory.rs  orchestration.rs  skill.rs  store.rs
crates/adm-new-packaging/: Cargo.toml
crates/adm-new-packaging/src/: dist.rs  file_service.rs  lib.rs  portable.rs
crates/adm-new-patch/: Cargo.toml
crates/adm-new-patch/src/: lib.rs
crates/adm-new-pipeline/: Cargo.toml
crates/adm-new-pipeline/src/: artifact_view.rs  checkpoint.rs  design_flow.rs  development_registry.rs  game_spec_v2_steps.rs  generation.rs  lib.rs  product_executor.rs  r2_release.rs  source.rs  stage_result.rs  style_image.rs  work_units.rs
crates/adm-new-pipeline/src/cross_genre_evaluation/: forbidden_source_tokens.json  mod.rs  runner.rs  samples.rs  types.rs
crates/adm-new-pipeline/src/stages/: mod.rs  step00_02.rs  step03_06.rs  step07.rs  step07_v2.rs  step08_10_v2.rs  step08_14.rs  step11_v2.rs  step12_v2.rs  step13_v2.rs  step14_v2.rs
crates/adm-new-pipeline/src/stages/step11_v2/: engine.rs  support.rs  types.rs
crates/adm-new-pipeline/src/stages/step12_v2/: image_support.rs  production.rs  types.rs
crates/adm-new-pipeline/src/stages/step13_v2/: types.rs  validation.rs
crates/adm-new-pipeline/tests/: a09_cross_genre_evaluation.rs  a10_migration_release.rs  product_executor.rs  step11_v2.rs  step12_v2.rs  step13_v2.rs  step14_v2.rs
crates/adm-new-save/: Cargo.toml
crates/adm-new-save/src/: lib.rs
crates/adm-new-sdk/: Cargo.toml
crates/adm-new-sdk/src/: ai_extractor.rs  knowledge_base.rs  lib.rs  skill_overlay.rs
crates/adm-new-sdk/tests/: skill_overlay.rs
crates/adm-new-storage/: Cargo.toml
crates/adm-new-storage/src/: lib.rs  pipeline_checkpoint.rs
crates/adm-new-tauri-commands/: Cargo.toml
docs/independence/: README.md  persistent-path-registry.json  source-boundary-inventory.json
gates/: README.md
knowledge/: resource-manifest.json
knowledge/ai_memory/: INDEX.md  README.md  memory_config.json
knowledge/design_data/: cross_layer_rules.json  domain_order.json  gameplay_system_options.json  roleclass_review.csv
knowledge/market_data/: roguelike.json
knowledge/schemas/: art_requirements_contract.schema.json  correction_queue.schema.json  design_domains.schema.json  design_handoff.schema.json  design_portrait.schema.json  design_validation_report.schema.json  devflow_concept.schema.json  execution_object_workflow.schema.json  program_requirements_contract.schema.json  review_report.schema.json
knowledge/sdks/: _index.json  _spec_template.md
pipeline/artifact_layer/: README.md  dependency_graph.json  registry.json
plan/: 2026-07-15_universal_game_spec_compiler.md
plan/dev/: A01_game_spec_foundation.md  README.md  (+9 more)
tools/: Finalize-PortableSwap.ps1  build-portable.ps1  build-root-launcher.ps1  clean-generated.ps1  new-cleanup-lease.ps1  security-scan-allowlist.json  verify-standalone.ps1
web/: package-lock.json  package.json
(+768 files in other folders)
