[package]
name = "desktop-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
adm-new-ai = { path = "../../crates/adm-new-ai" }
adm-new-application = { path = "../../crates/adm-new-application" }
adm-new-contracts = { path = "../../crates/adm-new-contracts" }
adm-new-design = { path = "../../crates/adm-new-design" }
adm-new-foundation = { path = "../../crates/adm-new-foundation" }
adm-new-pipeline = { path = "../../crates/adm-new-pipeline" }
adm-new-storage = { path = "../../crates/adm-new-storage" }
adm-new-tauri-commands = { path = "../../crates/adm-new-tauri-commands" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
tauri = { version = "2" }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "desktop-tauri"
path = "src/main.rs"
