[package]
name = "adm-new-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
adm-new-ai = { path = "../adm-new-ai" }
adm-new-artifact = { path = "../adm-new-artifact" }
adm-new-contracts = { path = "../adm-new-contracts" }
adm-new-design = { path = "../adm-new-design" }
adm-new-foundation = { path = "../adm-new-foundation" }
adm-new-packaging = { path = "../adm-new-packaging" }
adm-new-patch = { path = "../adm-new-patch" }
adm-new-pipeline = { path = "../adm-new-pipeline" }
adm-new-save = { path = "../adm-new-save" }
adm-new-sdk = { path = "../adm-new-sdk" }
adm-new-storage = { path = "../adm-new-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[lib]
path = "src/lib.rs"
