[package]
name = "adm-new-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
adm-new-foundation = { path = "../adm-new-foundation" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
