[package]
name = "adm-new-foundation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
atomic-write-file = "0.3"
fs2 = "0.4"
same-file = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
