[package]
name = "adm-new-packaging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
adm-new-contracts = { path = "../adm-new-contracts" }
adm-new-foundation = { path = "../adm-new-foundation" }
adm-new-storage = { path = "../adm-new-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
