[package]
name = "adm-new-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
adm-new-contracts = { path = "../adm-new-contracts" }
adm-new-foundation = { path = "../adm-new-foundation" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
